# Modern-CMake-for-Cpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
examples/: CMakeLists.txt
examples/chapter01/: CMakeLists.txt
examples/chapter01/01-hello/: CMakeLists.txt  hello.cpp
examples/chapter02/: CMakeLists.txt
examples/chapter02/01-arguments/: bracket.cmake  quoted.cmake  unquoted.cmake
examples/chapter02/02-variables/: set.cmake
examples/chapter02/03-environment/: CMakeLists.txt
examples/chapter02/04-scope/: CMakeLists.txt
examples/chapter02/06-conditional/: conditional.cmake  conditional_compare.cmake  conditional_gotcha.cmake
examples/chapter02/07-loops/: foreach.cmake  zip.cmake
examples/chapter02/08-definitions/: function.cmake  macro.cmake
examples/chapter02/10-useful/: message_context.cmake
examples/chapter03/: CMakeLists.txt
examples/chapter03/01-partition/: CMakeLists.txt  main.cpp
examples/chapter03/01-partition/cars/: car.h
examples/chapter03/02-include/: CMakeLists.txt  main.cpp
examples/chapter03/02-include/cars/: car.h  cars.cmake
examples/chapter03/03-add_subdirectory/: CMakeLists.txt  main.cpp
examples/chapter03/03-add_subdirectory/cars/: CMakeLists.txt  car.cpp
examples/chapter03/04-subprojects/cars/: CMakeLists.txt
examples/chapter03/05-structure/src/app1/lib3/: lib3.cpp  lib3.h
examples/chapter03/05-structure/src/app2/: app2.cpp
examples/chapter03/05-structure/src/lib1/: lib1.cpp  lib1.h
examples/chapter03/05-structure/src/lib2/: lib2.cpp  lib2.h
examples/chapter03/06-toolchain/: CMakeLists.txt  main.cpp
examples/chapter03/07-features/: CMakeLists.txt
examples/chapter03/09-in-source/: CMakeLists.txt
examples/chapter04/: CMakeLists.txt
examples/chapter05/: CMakeLists.txt
examples/chapter06/: CMakeLists.txt
examples/chapter07/: CMakeLists.txt
examples/chapter07/01-find-package-variables/: CMakeLists.txt
examples/chapter07/02-find-package-targets/: CMakeLists.txt  main.cpp
examples/chapter08/: CMakeLists.txt
examples/chapter09/: CMakeLists.txt
examples/chapter10/: CMakeLists.txt
examples/chapter11/: CMakeLists.txt
examples/chapter12/: CMakeLists.txt
