cmake_minimum_required(VERSION 3.21)

project(
        example
        VERSION 1.0
        DESCRIPTION
        "Examples for chapter 1 of the Modern CMake for C++ book"
        LANGUAGES CXX
)

# Add subdirectories with a simple executable
add_subdirectory(chapter01)
add_subdirectory(chapter02)
add_subdirectory(chapter03)
add_subdirectory(chapter04)
add_subdirectory(chapter05)
add_subdirectory(chapter06)
add_subdirectory(chapter07)
add_subdirectory(chapter08)
add_subdirectory(chapter09)
add_subdirectory(chapter10)
add_subdirectory(chapter11)
add_subdirectory(chapter12)
